RESOLVED FIXED198539
Fix 64-bit vs 32-bit mismatch in ISOFairPlayStreamingPsshBox.cpp
https://bugs.webkit.org/show_bug.cgi?id=198539
Summary Fix 64-bit vs 32-bit mismatch in ISOFairPlayStreamingPsshBox.cpp
Keith Rollin
Reported 2019-06-04 12:54:43 PDT
Both ISOFairPlayStreamingKeyAssetIdBox and ISOFairPlayStreamingKeyContextBox have Vector<> data members. The parse() members of these classes call Vector<>::resize() on these members. In both cases, the type of the parameter passed is a uint64_t. However, resize() takes a size_t. On some platforms, size_t is a 32-bit value, leading to a compile-time type mismatch error. Fix this by changing the type of the value passed to parse() into a size_t.
Attachments
Patch (2.36 KB, patch)
2019-06-04 13:02 PDT, Keith Rollin
no flags
Radar WebKit Bug Importer
Comment 1 2019-06-04 12:54:57 PDT
Keith Rollin
Comment 2 2019-06-04 13:02:36 PDT
WebKit Commit Bot
Comment 3 2019-06-04 17:40:41 PDT
Comment on attachment 371322 [details] Patch Clearing flags on attachment: 371322 Committed r246092: <https://trac.webkit.org/changeset/246092>
WebKit Commit Bot
Comment 4 2019-06-04 17:40:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.