Fix 64-bit vs 32-bit mismatch in ISOFairPlayStreamingPsshBox.cpp https://bugs.webkit.org/show_bug.cgi?id=198539 <rdar://problem/51410358>

Reviewed by Alex Christensen.

Both ISOFairPlayStreamingKeyAssetIdBox and
ISOFairPlayStreamingKeyContextBox have Vector<> data members. The
parse() members of these classes call Vector<>::resize() on these
members. In both cases, the type of the parameter passed is a
uint64_t. However, resize() takes a size_t. On some platforms, size_t
is a 32-bit value, leading to a compile-time type mismatch error. Fix
this by changing the type of the value passed to parse() into a
size_t.

No new tests -- no new functionality.

* platform/graphics/avfoundation/ISOFairPlayStreamingPsshBox.cpp:
(WebCore::ISOFairPlayStreamingKeyAssetIdBox::parse):
(WebCore::ISOFairPlayStreamingKeyContextBox::parse):


Canonical link: https://commits.webkit.org/212551@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246092 268f45cc-cd09-0410-ab3c-d52691b4dbfc